# LinkAly

./: README.md
AuthenticationService/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
AuthenticationService/alembic/: env.py
AuthenticationService/alembic/versions/: 2025_05_08_2054-70b1cfcc433a_create_users_table.py
AuthenticationService/docker/grafana/dashboards/: fastapi.json
AuthenticationService/docker/loki/: loki-config.yaml
AuthenticationService/docker/prometheus/: prometheus.yml
AuthenticationService/docker/promtail/: promtail-config.yaml
AuthenticationService/src/: .env.template  main.py
AuthenticationService/src/api/: general_router.py
AuthenticationService/src/api/v1/: __init__.py  recovery_router.py  service_router.py  users_router.py
AuthenticationService/src/core/: config.py  db_helper.py  lifespan.py  logging_promtail.py  smtp_helper.py
AuthenticationService/src/dependencies/: services_depends.py  token.py  token_depends.py
AuthenticationService/src/middleware/: __init__.py  base.py  cors.py  general_middleware.py  prometheus.py
AuthenticationService/src/repositories/: base.py  base_repository.py  smtp_repository.py  user.py  user_repository.py
AuthenticationService/src/schemas/: recovery.py  user.py
AuthenticationService/src/security/: argon_hasher.py  jwt.py
AuthenticationService/src/services/: __init__.py  recovery_service.py  user_service.py
AuthenticationService/src/tables/: base.py  base_table.py  user.py
AuthenticationService/src/utils/: __init__.py  password_validator.py
Documentation/: requirements.md
RedirectService/: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
RedirectService/alembic/: env.py
RedirectService/alembic/versions/: 2025_05_23_1048-f1fa4925dd69_fix_indexes.py  2025_05_23_1049-dca643aa758b_fix_indexes.py  2025_05_26_1547-2b6c60922b24_add_user_id.py
RedirectService/docker/grafana/dashboards/: redir_service.json
RedirectService/docker/prometheus/: prometheus.yml
RedirectService/docker/promtail/: promtail-config.yaml
RedirectService/src/: .env.template  entrypoint.sh  main.py
RedirectService/src/api/: general_router.py
RedirectService/src/api/v1/: __init__.py  redirect_router.py  service_router.py
RedirectService/src/core/: config.py  db_helper.py  lifespan.py  logging_promtail.py
RedirectService/src/dao/: base.py  url.py
RedirectService/src/dependencies/: auth.py  service.py
RedirectService/src/middleware/: __init__.py  base.py  cors.py  prometheus.py
RedirectService/src/schemas/: url.py
RedirectService/src/services/: url.py
RedirectService/src/tables/: base.py  urlpair.py
RedirectService/src/utils/: case_converter.py  public_key_reciever.py  url_convertor.py
