[project]
name = "auth-service"
version = "0.1.1"
description = "auth-service for alsms"
authors = [
    {name = "Timofey - mrzkv"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "authx (>=1.4.2,<2.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
]

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "BLE001", "ARG001", "EM101", "TRY003", "S608", "B904", "B008"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
