[project]
name = "redirectservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Timofey - mrzkv"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.11.10,<0.12.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", "BLE001", "ARG001"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
