[project]
name = "redirectservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Timofey - mrzkv"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff==0.11.13",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "gunicorn==23.0.0",
    "sqlalchemy==2.0.41",
    "asyncpg==0.30.0",
    "pydantic[email]==2.11.5",
    "alembic==1.16.1",
    "pydantic-settings==2.9.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "dotenv==0.9.9",
    "pyjwt==2.10.1",
    "requests==2.32.4",
    "cryptography==45.0.4"
]


[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", "BLE001", "ARG001",
    "TRY003", "EM101", "N805",
    "B008"
]
